+New version of Launch plugin with some bug fixes.
+Add Close Others option to right click tab menu to close all but the selected tab.
+Add support for highlighting Forth source files.
+Add support for Java to CodeBrowser (patch from Eric Gaudet)
+Add support for Diff files to CodeBrowser (patch from Eric Gaudet)
+Custom autobackup directory can be configured.

LIBRARY:
+New plugin interface for adding autocompletion providers added (iface.AutocompI)
+FilterDialog class added to eclib

BUG FIXES:
+Fix some minor vhdl highlighting issues.
+Fix exception that could occur when syntax highlighting extensions are removed.
+Fix issue where autocomp/callip popups would not get hidden when they should.
+Fix issue where window could be restored off screen when extra displays have
been removed from the system between running the program.
+Fix issue where tab label would incorrectly show a modified state after loading
a large file in incremental mode.
+Fix bug in python autocompleter that could raise an error when retrieving a 
calltip under some conditions.
+Fix issue with detecting magic encoding if it was changed after the buffer
was loaded on subsequent saves.
+Fix bug in reloading of buffers after encoding error is detected that would
result in them always becoming a read only buffer.
+Fix bug in retrieving file extension for file types that have no extensions
associated with them.
+Fix bad link to online documentation in Help menu
+Default to English local when localized resource for LANGUAGE_DEFAULT are not 
available.
+Fix issue with folded code dissappearing when folding option is toggled off.

#-----------------------------------------------------------------------------#

VERSION 0.5.32
DATE 12/28/2009
32nd Alpha Release

NEWS:

Another quick bug fix release to address some critical issues that were still
present after the last release.

BUG FIXES:
+Fix error introduced into extended autocomp in previous release.